@startuml
skinparam backgroundColor #1e1e1e
skinparam class {
    BackgroundColor #4a7de0
    ArrowColor White
    BorderColor Black
    FontColor Black
}

class Main {
    + main(String[]): void
}

class FileLoader {
    - words: ArrayList<String>
    - filename: String
    + FileLoader(filename: String)
    + loadFile(): ArrayList<String>
}

class StopWords {
    - words: ArrayList<String>
    + StopWords(filePath: String)
    + isStopWord(w: String): boolean
}

class ArticleList {
    - words: ArrayList<String>
    + ArticleList(words: ArrayList<String>)
    + getWords(): ArrayList<String>
    + removeStopWords(stop: StopWords): ArrayList<String>
    + uniqueWords(): ArrayList<String>
    + countWordFrequency(): void
    + richestVocab(a1: ArticleList, a2: ArticleList, a3: ArticleList): void
    + top5Words(): void
}

Main --> FileLoader
Main --> StopWords
Main --> ArticleList
ArticleList --> StopWords
@enduml
